# webops

./: .env.example  .gitignore  ADDON_DETAIL_PAGE.md  ADDON_DISCOVERY_FIX.md  ADDON_ENABLE_DISABLE_SYSTEM.md  ADDON_SYSTEM_SUMMARY.md  ADDON_UI_IMPLEMENTATION.md  AGENTS.md  AUTOMATION_SYSTEM_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMAND_INJECTION_PREVENTION.md  CONFIGURATION_SECURITY.md  CONTRIBUTING.md  DEPENDENCY_SECURITY.md  DOCKER_ADDON_COMPLETE.md  DOCKER_ADDON_QUICKSTART.md  DOCKER_ADDON_SUMMARY.md  Dockerfile  ENV_SETUP_FIX.md  INSTALLATION_WARNING_FIX.md  INSTALLER_COMPLETION_FIX.md  LICENSE  MAINTAINERS.md  Makefile  POST_INSTALLATION.md  README-CELERY-SETUP.md  README.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_INDEX.md  SECURITY_AUDIT_SUMMARY.txt  SECURITY_AUDIT_XSS_CSRF.md  SECURITY_FIX_PLAN.md  SECURITY_KEY_MANAGEMENT.md  SERVICES_SUMMARY.md  SERVICE_CONTROL_IMPLEMENTATION.md  SERVICE_CONTROL_README.md  SESSION_SUMMARY.md  (+14 more)
.github/: .pre-commit-config.yaml  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  markdown-link-check-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  container-security.yml  dependency-updates.yml  deploy.yml  docs-deployment.yml  nightly.yml  notifications-alerts.yml  performance-testing.yml  pr-checks.yml  release.yml
.webops/agents/: requirements.txt
.webops/agents/config/: config_manager.py
.webops/agents/core/: __init__.py
.webops/agents/decision/: reasoning_engine.py  risk_assessment.py
.webops/agents/deployment/: .env.template  (+1 more)
backups/pre-upgrade-20251020-203229/: checksums.txt  setup.sh  system-state.txt
cli/: .gitignore  Dockerfile  README.md  README_ENHANCED.md  docker-entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  webops
cli/tests/: test_enhanced_cli.py  test_security_features.py
cli/webops_cli/: __init__.py  __main__.py  admin.py  api.py  cli.py  command_shortcuts.py  config.py  deployment_wizard.py  encryption.py  enhanced_cli.py  errors.py  interactive_commands.py  project_setup.py  security_logging.py  system.py  troubleshooting_wizard.py  validators.py  websocket_client.py  wizards.py
cli/webops_cli/scripts/: create-isolated-deployment.sh  set-default-python.sh  ssl-manager.sh  validate-user-setup.sh  webops-admin.sh
cli/webops_cli/system-templates/app/nginx/: app.conf.j2
cli/webops_cli/system-templates/app/systemd/: app.service.j2
cli/webops_cli/system-templates/base/systemd/: base.service.j2
cli/webops_cli/system-templates/control-panel/: env.j2
cli/webops_cli/system-templates/control-panel/nginx/: nginx-ssl-config.conf
cli/webops_cli/system-templates/llm/systemd/: vllm_cpu.service.j2
cli/webops_cli/system-templates/unified/nginx/: unified.conf.j2
cli/webops_cli/system-templates/unified/systemd/: unified.service.j2
cli/webops_cli/ui/: README.md  __init__.py  display.py  interactive.py  progress.py  terminal.py
cli/webops_cli/wizards/: __init__.py  deployment_wizard.py  troubleshooting_wizard.py  wizards.py
control-panel/: .gitignore  AUTOMATION_QUICK_START.md  AUTOMATION_SYSTEM_ANALYSIS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPARISON_SUMMARY.md  COMPLETE_AUTO_DEPLOYMENT_SYSTEM.md  DEV_COMMANDS.md  ENHANCEMENTS_SUMMARY.md  ENTERPRISE_DEPLOYMENTS_UPDATE.md  LEGACY_CLEANUP_FINAL_REPORT.md  LLM_AUTO_DETECTION_IMPLEMENTATION.md  LLM_AUTO_DETECTION_SYSTEM.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  RAILWAY_STYLE_AUTO_DEPLOYMENT.md  cookies.txt  pyrightconfig.json  quickstart.sh  requirements.txt  run_tests.py  start_celery.sh  start_dev.sh  stop_dev.sh  test_auto_detection.py  test_llm_detection_comprehensive.py  verify_mvp.py
control-panel/config/: __init__.py  asgi.py  celery_app.py  dynamic_settings.py  settings.py  urls.py
control-panel/docs/: LEGACY_CODE_REPORT.md  LEGACY_CODE_SUMMARY.md  LLM_PROGRESS_TRACKING.md  MIGRATION_GUIDE_V2.md  QUICK_START_REFACTORING.md  TODO_TRACKING.md  notification-system-summary.md  toast-system.md
control-panel/static/: test-themes.html
control-panel/staticfiles/: manifest.json
control-panel/templates/: STYLE_GUIDE.md  base.html  dashboard.html  toast-test.html
docs/: README.md  api-reference.md  celery-setup-guide.md  changelog.md  deployment-guide.md  design-system-v2.md  development.md  implementation-guide.md  implementation-plan.md  installation.md  llm-deployment-guide.md  llm-deployment-steps-guide.md  monitoring.md  quick-start-guide.md  security-features.md  troubleshooting.md  user-management.md  webops-user-guide.md
docs/addons/: kvm-implementation.md  kvm.md
docs/advanced/: celery-setup-guide.md  enterprise.md
docs/api/: README.md  index.html  styles.css
docs/architecture/: core.md
docs/cli/: README.md
docs/control-panel/: AUTOHEALING_AND_RESUME.md  CHANGELOG.md  LLM_PREREQUISITES.md  MIGRATION_GUIDE_V2.md  QUICK_START_REFACTORING.md  notification-system-summary.md  notifications-center.md
docs/deployment/: deployment-guide.md  llm-deployment-guide.md  migration.md
docs/development/: addon-system-proposal.md  development.md  frontend-agent-policies.md  implementation-guide.md  implementation-plan.md  proposed-addons.md  terminal-experience-enhancement-plan.md
docs/frontend/: chat-interface-documentation.md
docs/getting-started/: installation.md  onboarding.md  quick-start-guide.md
docs/operations/: configuration.md  monitoring.md  performance.md  troubleshooting.md
docs/reference/: api-reference.md  app-contract.md  changelog.md  design-system-v2.md  webops-user-guide.md
docs/security/: security-features.md  security-hardening.md
docs/troubleshooting/: connection-timeout-fix.md
provisioning/: config.env
provisioning/agents/: README.md  setup.py
scripts/: create-isolated-deployment.sh  security-audit.sh  validate-user-setup.sh  webops-admin.sh  webops-security-check.sh
system-templates/: README.md  nginx-ssl-config.conf  template_registry.py
system-templates/nginx/: app.conf.j2  llm.conf.j2
system-templates/systemd/: app.service.j2  vllm.service.j2
(+671 files in other folders)
